--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ if(MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
 endif()
 
-#add_subdirectory("parser")
+add_subdirectory("parser")
 #add_subdirectory("modParser")
 add_subdirectory("gui")
