--- a/libs/saveParser/CMakeLists.txt
+++ b/libs/saveParser/CMakeLists.txt
@@ -15,8 +15,11 @@ add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Libraries")
 
-include_directories("../parser")
+target_link_libraries(${PROJECT_NAME} "Parser")
+
+include_directories(${EXTLIB_INCLUDE_DIR})
 
 add_library("ZLib" SHARED IMPORTED)
-set_target_properties("ZLib" PROPERTIES IMPORTED_IMPLIB zlib/zdll.lib)
+set_target_properties("ZLib" PROPERTIES IMPORTED_IMPLIB "${EXTLIB_BINARIES_DIR}/zdll.lib")
 target_link_libraries(${PROJECT_NAME} "ZLib")
+install(FILES "${EXTLIB_BINARIES_DIR}/zlib1.dll" DESTINATION ${TARGET_DIR})
