--- a/modParser/CMakeLists.txt
+++ b/modParser/CMakeLists.txt
@@ -5,7 +5,7 @@ project(${PROJECT_NAME})
 
 set(HEADER_FILES
 	BSAFile.h
-	Ingredients.h
+	Config.h
 	Mod.h
 	StringsTable.h
 )
@@ -13,7 +13,6 @@ set(HEADER_FILES
 set(SOURCE_FILES
 	main.cpp
 	BSAFile.cpp
-	Ingredients.cpp
 	Mod.cpp
 	StringsTable.cpp
 )
