Converted ModParser to a static library.

--- a/modParser/CMakeLists.txt
+++ b/modParser/CMakeLists.txt
@@ -7,20 +7,19 @@ set(HEADER_FILES
 	BSAFile.h
 	Config.h
 	Mod.h
+	ModParser.h
 	StringsTable.h
 )
 
 set(SOURCE_FILES
-	main.cpp
 	BSAFile.cpp
 	Mod.cpp
+	ModParser.cpp
 	StringsTable.cpp
 )
 
-add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
 
-set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Applications")
+set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Libraries")
 
 target_link_libraries(${PROJECT_NAME} "Parser")
-
-install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${TARGET_DIR})
