Reworked the ModParser library for easier extension. Parsing speed can be a little slower though.

--- a/libs/modParser/CMakeLists.txt
+++ b/libs/modParser/CMakeLists.txt
@@ -6,6 +6,7 @@ project(${PROJECT_NAME})
 set(HEADER_FILES
 	BSAFile.h
 	Config.h
+	ConfigParser.h
 	Mod.h
 	ModParser.h
 	StringsTable.h
@@ -13,6 +14,7 @@ set(HEADER_FILES
 
 set(SOURCE_FILES
 	BSAFile.cpp
+	ConfigParser.cpp
 	Mod.cpp
 	ModParser.cpp
 	StringsTable.cpp
