--- a/libs/parser/CMakeLists.txt
+++ b/libs/parser/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.5)
 
-set(PROJECT_NAME "Parser")
-project(${PROJECT_NAME})
+set(target "Parser")
+project(${target})
 
 set(HEADER_FILES
 	Parser.h
@@ -11,6 +11,13 @@ set(SOURCE_FILES
 	Parser.cpp
 )
 
-add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
+add_library(${target} STATIC ${HEADER_FILES} ${SOURCE_FILES})
+add_library(${META_PROJECT_NAME}::${target} ALIAS ${target})  # Create namespaced alias
 
-set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Libraries")
+set_target_properties(${target} PROPERTIES FOLDER "Libraries")
+target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR}/libs)
+
+set_target_properties(${target} PROPERTIES ${DEFAULT_PROJECT_OPTIONS})
+target_compile_definitions(${target} PUBLIC ${DEFAULT_COMPILE_DEFINITIONS})
+target_compile_options(${target} PUBLIC ${DEFAULT_COMPILE_OPTIONS})
+target_link_libraries(${target} PUBLIC ${DEFAULT_LINKER_OPTIONS})
