--- a/libs/saveParser/CMakeLists.txt
+++ b/libs/saveParser/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 find_package(ZLIB REQUIRED)
+find_package(LZ4 REQUIRED)
 
 set(target "SaveParser")
 project(${target})
@@ -19,7 +20,7 @@ add_library(${META_PROJECT_NAME}::${target} ALIAS ${target})  # Create namespace
 set_target_properties(${target} PROPERTIES FOLDER "Libraries")
 target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR}/libs)
 
-target_link_libraries(${target} ${META_PROJECT_NAME}::Parser ZLIB::ZLIB)
+target_link_libraries(${target} ${META_PROJECT_NAME}::Parser ZLIB::ZLIB LZ4)
 
 set_target_properties(${target} PROPERTIES ${DEFAULT_PROJECT_OPTIONS})
 target_compile_definitions(${target} PUBLIC ${DEFAULT_COMPILE_DEFINITIONS})
